# codeforces

./: CMakeLists.txt  README.md
problems/: 1802B.cpp
